src/test/deca/syntax/invalid/decl_method/test_decl_method_with_type.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// mismatched input '(' expecting {'=', ',', ';'}
// Historique:
//    cree le 01/01/2024

class A {   
    int a;

    protected int setA (int a) {
        this.a = a;
    }
}
